--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_API_BASE_URL="http://127.0.0.1:5195"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="quwPUWAN2jDDmj1Ap8Cf6wcclNPoIDPayH9yAsyZzTg=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXT_PUBLIC_TELEGRAM_CHAT_ID="your_chat_id_here"
+NEXT_PUBLIC_TELEGRAM_BOT_TOKEN="your_bot_token_here"
+NEXT_PUBLIC_API_BASE_URL="https://api.telegram.org"
