--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.8",
     "zod": "^4.3.4",
     "zustand": "^5.0.3"
   },
